[ADD] Added min height to media query to prevent content being too big for some viewports

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,7 +221,7 @@ a:hover {
         height: 50%;
     }
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) and (min-height: 768px) {
     h2, .navItem {
         font-size: 2.4rem;
     }
@@ -267,7 +267,7 @@ a:hover {
 }
 @media screen and (min-width: 992px) and (orientation: landscape) {
     h2, .navItem {
-        font-size: 3rem;
+        font-size: 2.5rem;
     }
     p {
         font-size: 1.8rem;
@@ -277,10 +277,9 @@ a:hover {
         padding: 0.5vw 1vw;
     }
     .container-main {
-        max-width: 60%;
+        max-width: 75%;
     }
     .buttonAnswer {
-        font-size: 2.5rem;
         margin: 1vh 0;
     }
     .navIcon {
